--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
   <link rel="shortcut icon" href="./favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <title>React App</title>
+  <title>shopping-cart</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
   <div id="root"></div>
   
 </body>
